# honeycomb

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
cmake/: vcpkg_install.cmake
src/: main.cpp
src/lib/: honeycomb.cpp  honeycomb.h  honeycomb.test.cpp  skeleton_2d.cpp  skeleton_2d.h  skeleton_2d.test.cpp  vtk_renderer.cpp  vtk_renderer.h
